# hook

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SKILL.md
.github/workflows/: ci.yml  publish-crates.yml  release-binaries.yml
apps/: README.md
apps/kafka-openclaw-hook/: Cargo.toml  README.md  SKILL.md
apps/kafka-openclaw-hook/src/: config.rs  consumer.rs  dlq.rs
crates/: README.md
crates/relay-core/: Cargo.toml  README.md  SKILL.md
docs/: CHANGELOG.md  README.md  architecture.md  configuration.md  deployment.md  observability.md  roadmap.md  spec.md
docs/references/: README.md  agent-orchestrator.md  boot.md  github-hooks.md  hook-definition.md  linear-hooks.md  openclaw-agents.md  openclaw-relay.md  openclaw-subagents.md  payload-sanitization.md  release-publishing.md  setup-wizard.md  tailscale.md
firecracker/: README.md
firecracker/systemd/: external-blackbox.service  external-blackbox.timer  external-chisel-check.service  external-chisel-check.timer  firecracker-boot-logger.service  firecracker-shutdown-logger.service  firecracker-watchdog.service  firecracker-watchdog.timer  kernel-kmsg-capture.service  pstore-collect.service
firecracker/watchdog/: alert.sh  alerts.env.example  boot-logger.sh  chisel-check.env.example  (+12 more)
references/: release-publishing.md
scripts/: _build-firecracker-rootfs.sh  build-firecracker-rootfs.sh  build-release-binaries.sh  gen-certs.sh  publish-crates.sh  run-firecracker.sh  run-hook-stack.sh  setup-firecracker-bridge-network.sh  smoke-test-rust.sh  teardown-firecracker-bridge-network.sh
src/: main.rs
(+13 files in other folders)
