[package]
name = "kafka-openclaw-hook"
version = "0.2.0"
edition = "2024"
description = "Outbound Kafka consumer that forwards webhook events to OpenClaw."
license = "MIT OR Apache-2.0"
repository = "https://github.com/heyAyushh/webhook-relay"
readme = "README.md"
rust-version = "1.85"
keywords = ["kafka", "consumer", "webhook", "openclaw"]
categories = ["network-programming"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
relay-core = { version = "0.2.0", path = "../../crates/relay-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.21.0"
